@@ -46,16 +46,70 @@
 # define LIBUSB_RECIPIENT_ENDPOINT  USB_RECIP_ENDPOINT
 # define LIBUSB_RECIPIENT_OTHER     USB_RECIP_OTHER
 
-# define libusb_device usb_device
+# define libusb_context void
+typedef struct usb_device libusb_device;
 # define libusb_device_handle usb_dev_handle
 # define libusb_device_descriptor usb_device_descriptor
 
+# define libusb_ref_device(def) def
 # define libusb_reset_device(dev) usb_reset (dev)
 # define libusb_close(dev) usb_close (dev)
 # define libusb_set_configuration(dev, cfg) usb_set_configuration (dev, cfg)
 # define libusb_claim_interface(dev, iface) usb_claim_interface (dev, iface)
 # define libusb_set_interface_alt_setting(dev, prev, alt) usb_set_altinterface (dev, alt)
 # define libusb_release_interface(dev, iface) usb_release_interface (dev, iface)
+
+static inline int
+libusb_init (libusb_context **ctx)
+{
+    int ret;
+
+    *ctx = NULL;
+
+    usb_init ();
+
+    ret = usb_find_busses ();
+    if (ret < 0)
+        return ret;
+
+    return usb_find_devices ();
+}
+
+static inline ssize_t
+libusb_get_device_list (libusb_context *ctx, libusb_device ***list)
+{
+    struct usb_bus *bus;
+    ssize_t ret = 0;
+
+    *list = malloc (sizeof (**list));
+    for (bus = usb_get_busses (); bus; bus = bus->next)
+    {
+        libusb_device *dev;
+
+        for (dev = bus->devices; dev; dev = dev->next)
+        {
+            *list = realloc (*list, sizeof (**list) * (ret + 2));
+            (*list)[ret] = malloc (sizeof (***list));
+            *(*list)[ret] = *dev;
+            ++ret;
+        }
+    }
+    (*list)[ret] = NULL;
+
+    return ret;
+}
+
+static inline void
+libusb_free_device_list(libusb_device **list, int unref_devices)
+{
+    size_t i;
+
+    i = 0;
+    while (list[i])
+        free (list[i++]);
+
+    free (list);
+}
 
 static inline int
 libusb_bulk_transfer (libusb_device_handle *dev_handle, unsigned char endpoint,
@@ -103,7 +157,7 @@ libusb_control_transfer (libusb_device_handle *dev_handle, uint8_t request_type,
 # define usb_control_msg(...) use_libusb_1_api
 
 static inline int
-libusb_open (struct libusb_device *dev, libusb_device_handle **handle)
+libusb_open (libusb_device *dev, libusb_device_handle **handle)
 {
     *handle = usb_open (dev);
     return *handle ? 0 : -99;
@@ -125,7 +179,7 @@ libusb_get_string_descriptor_ascii (libusb_device_handle *dev, uint8_t index,
 
 typedef struct
 {
-    struct libusb_device *dev;
+    libusb_device *dev;
     struct libusb_device_handle *handle;
     void *data;
 } urj_usbconn_libusb_param_t;
